<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">



    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@mipmap/bj" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="387dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/str"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="252dp"
        android:layout_height="56dp"
        android:layout_above="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_marginStart="178dp"
        android:layout_marginLeft="178dp"
        android:layout_marginTop="-638dp"
        android:layout_marginEnd="-431dp"
        android:layout_marginRight="-431dp"
        android:layout_marginBottom="-588dp"
        android:layout_toStartOf="@+id/textView"
        android:layout_toLeftOf="@+id/textView"
        android:text="@string/from"
        android:textSize="35sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="148dp"
        android:layout_marginLeft="148dp"
        android:layout_marginTop="171dp"
        android:layout_marginEnd="151dp"
        android:layout_marginRight="151dp"
        android:layout_marginBottom="-130dp"
        android:text="@string/btn" />


</RelativeLayout>